[project]
name = "engram-bot"
version = "0.1.0"
description = "Forward anything to Telegram, get a tagged, linked, deduplicated Obsidian note back. A single-tenant LLM capture bot for your second brain."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Mikhail Blank" }]
keywords = ["telegram", "obsidian", "claude", "anthropic", "note-taking", "pkm", "second-brain", "rag", "engram"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "anthropic>=0.100.0",
    "numpy>=2.0",
    "openai>=2.36.0",
    "pypdf>=4.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "youtube-transcript-api>=1.2.4",
]

[project.urls]
Homepage = "https://github.com/mishablank/Engram"
Repository = "https://github.com/mishablank/Engram"
Issues = "https://github.com/mishablank/Engram/issues"

[project.scripts]
engram = "engram.bot:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engram"]
